--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-seaborn==0.11.2
-numpy==1.21.0
-pandas==1.3.0
-streamlit==1.8.0
-matplotlib==3.4.3
-yfinance==0.1.63
-scipy==1.7.3
+python_version == '3.11.*'
+pandas == 1.3.3
+numpy == 1.21.2
+matplotlib == 3.4.3
+seaborn == 0.11.2
+scipy == 1.7.3
+yfinance == 0.1.63
+pandas_datareader == 0.10.1
+streamlit == 0.88.0
